Tue Jan 23 14:58:32 CET 2001 Daniel Veillard <Daniel.Veillard@imag.fr>

	* Makefile.am libxslt.spec.in tests/REC1/Makefile.am
	  tests/REC2/Makefile.am: updated the makefiles and spec files to
	  add tests, and the FEATURES file to the RPM

Mon Jan 22 23:35:57 CET 2001 Daniel Veillard <Daniel.Veillard@imag.fr>

	* Makefile.am libxslt.spec.in libxslt/Makefile.am tests/Makefile.am:
	  prepared the Makefiles and spec files for a first release.
	* COPYING.LIB: added LGPL Licence

Mon Jan 22 22:36:43 CET 2001 Daniel Veillard <Daniel.Veillard@imag.fr>

	* libxslt/transform.c: applied cleanup patch from Bjorn Reese
	  <breese@mail1.stofanet.dk>

Mon Jan 22 20:24:36 CET 2001 Daniel Veillard <Daniel.Veillard@imag.fr>

	* configure.in libxslt.spec.in: first try to get a spec file

Mon Jan 22 19:37:00 CET 2001 Daniel Veillard <Daniel.Veillard@imag.fr>

	* libxslt/xsltproc.c: avoid segfault when stylesheet is inproper
	* libxslt/transform.c: add support for "*" to strip and preserve
	  space.

Mon Jan 22 15:30:19 CET 2001 Daniel Veillard <Daniel.Veillard@imag.fr>

	* TODO: updated
	* FEATURES: added with alist of what's in and what's not
	* libxslt/xslt.c: fixed top level Param and Variable stuff

Mon Jan 22 11:46:44 CET 2001 Daniel Veillard <Daniel.Veillard@imag.fr>

	* xsltproc.c: removed bug
	* tests/REC2/html.xml: added newline after doctype
	* libxslt/variables.[ch] libxslt/xsltInternals.h: added param
	  support, result tree fragment support (requires just commited
	  extensions to libxml2 XPath !!!)
	* transform.c: added call-template, with-param support
	* libxslt/pattern.[ch]: xsltFindTemplate() needed for call-template
	* TODO: updated, added a DONE section and started migrating stuff :-)

Sun Jan 21 12:03:16 CET 2001 Daniel Veillard <Daniel.Veillard@imag.fr>

	* Makefile.am tests/Makefile.am tests/REC1/Makefile.am
	  tests/REC2/Makefile.am tests/REC2/html.xml: added tests target
	  too, added the HTML output test
	* libxmls/xsltutils.c: added HTML output